--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,17 @@
         <mybatis.version>3.5.2</mybatis.version>
         <mybatis-spring.version>2.0.1</mybatis-spring.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <target>1.12</target>
+                    <source>1.12</source>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
