--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -135,6 +135,14 @@
             <version>5.1.10</version> 
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.5</version>
+        </dependency>
+
+
     </dependencies>
 
 
