--- a/dao/src/main/resources/l7mall.properties
+++ b/dao/src/main/resources/l7mall.properties
@@ -1,3 +1,3 @@
-ftp.server.http.prefix=http://img.l7mall.com/
+ftp.server.http.prefix=http://image.l7mall.com/
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
