ProductManageController.upload();tested

--- a/dao/src/main/resources/l7mall.properties
+++ b/dao/src/main/resources/l7mall.properties
@@ -1,3 +1,6 @@
+ftp.server.ip=192.168.66.1
+ftp.user=root
+ftp.password=root
 ftp.server.http.prefix=http://image.l7mall.com/
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
