--- a/service/pom.xml
+++ b/service/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.3.25.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
