--- a/dao/src/main/resources/l7mall.properties
+++ b/dao/src/main/resources/l7mall.properties
@@ -3,6 +3,7 @@ ftp.user=root
 ftp.password=root
 ftp.server.http.prefix=http://image.l7mall.com/
 
-alipay.callback.url= http://bkj2cx.natappfree.cc/order/alipay_callback.do
+alipay.callback.url= http://at4c8e.natappfree.cc/order/alipay_callback.do
+
         
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
